# Portfolio-Chat

./: Dockerfile  README.md  TODO.md  app.py  appv2.py  environment copy.yml  environment.yml  htmlTemplates.py  pyproject.toml  pypy-test.py  requirements-v2.txt  requirements.txt  scratch.ipynb  utils.py
db/lance.db/empty_table.lance/_transactions/: 0-496d7ac6-584d-4908-8c68-7b68d4f1d9a9.txn
db/lance.db/table_from_df.lance/_transactions/: 0-4ad6d4aa-9ce5-44a4-8240-056d3754fb53.txn  1-d6d80dcf-a70d-4a7b-a457-01dd196ce12d.txn
db/lance.db/table_from_df.lance/data/: a9c1bac2-a395-4c4d-92db-64e98883c1fd.lance
src/: app-backup.py  app.py  constants.py
test/: test_app.py
