[tool.poetry]
name = "poetry env use python"
version = "0.1.0"
description = ""
authors = ["James <jamesbrendamour7@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.0"
streamlit-javascript = "^0.1.5"
pypdf2 = "^3.0.1"
langchain = "^0.1.11"
openai = "^1.13.3"
faiss-cpu = "^1.8.0"
altair = "^5.2.0"
tiktoken = "^0.6.0"
huggingface-hub = "^0.21.4"
instructorembedding = "^1.0.1"
sentence-transformers = "^2.5.1"
langchain-community = "^0.0.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
